##################################################
 Revision history for Log::Log4perl
##################################################

1.39 (not yet released)
   *    (ms) Markus Benning reported that logcroak/confess/die stringify
             their arguments, which gets in the way when throwing data
             structures as exceptions. Added flag $STRINGIFY_DIE_MESSAGE.

1.38 (2012/09/23)
   *    (ms) Bob Kleemann reported that logdie() in wrapper classes
             printed incorrect caller lines. Fixed by adding 
             caller_depth_offset() utility to Log4perl.pm.
   *    (ms) Meir Guttman reported a use case for logging messages
             with dynamic levels on log4perl-devel@lists.sourceforge.net.
             Added to manual page.
   *    (ms) Implemented suggestion by Neil Hooey to check for and report
             undefined message elements before they're assembled in Appender.pm
             and a warning is issued without a proper code location:
             https://github.com/mschilli/log4perl/issues/15
   *    (ms) [rt.cpan.org #78734] Added spell check on filter parameter names

1.37 (2012/05/30)
   *    (ms) [rt.cpan.org #75655] Meir Guttman found the module to make
             Log::Log4perl::Appender::ScreenColoredLevels work on Win32,
             updated docs.
   *    (ms) [rt.cpan.org #76827] UTF-8 encoded configuration files are
             now supported (see Log::Log4perl::Config).
   *    (ms) [rt.cpan.org #77501] Unescaped left brace in regex is deprecated
             with perl 5.17. Times we live in. 

1.36 (2012/02/21)
   *    (ms) [rt.cpan.org #74833] Reini Urban fixed "defined @array" for
             perl 5.16
   *    (ms) [rt.cpan.org #74836] Cope with Carp's questionable decision to
             add a trailing dot to its messages.

1.35 (2012/01/03)
   *    (ms) [rt.cpan.org #73462] Changed logwarn/logcluck/logcarp/error_warn 
             to warn() unconditionally and send the message to log4perl which